# mpac_go2_env

./: .gitignore  CMakeLists.txt  Makefile  Mu_log_0609.pkl  README.md  Train.ipynb  Train_DataProcessing.ipynb  cmake_install.cmake  libs.sh  make_release.sh
analysis/live/: vis.py
analysis/post/: plot.py  qp_stand.py  timing_test.py  to_csv.py  tracking.py  u_test.py
analysis/unit_test/: unit_test.cpp
atnmy/: Adaptive_walk_idqp.py  atnmy.cpp  atnmy.h  high_level_cmd.py  mpac_cmd.py  teleop.py  xbox_teleop.py
ctrl/: ctrl.h  ctrl_args.h  ctrl_modes.h
ctrl/bound/: bound.cpp  bound.h  bound_args.h
ctrl/calibrate/: calibrate.cpp  calibrate.h  calibrate_args.h
ctrl/ctrl_utils/: joint_pos_pd.cpp  joint_pos_pd.h  traj_gen.cpp  traj_gen.h
ctrl/hard_stop/: hard_stop.cpp  hard_stop.h  hard_stop_args.h
ctrl/jump/: jump.cpp  jump.h  jump_args.h
ctrl/land/: land.cpp  land.h  land_args.h
ctrl/lie/: lie.cpp  lie.h  lie_args.h  lie_tlm.h
ctrl/sit/: sit.cpp  sit.h  sit_args.h
ctrl/soft_stop/: soft_stop.cpp  soft_stop.h  soft_stop_args.h
ctrl/stand/: stand.cpp  stand.h  stand_args.h  stand_idqp.cpp  stand_idqp.h  stand_idqp_args.h
ctrl/traj_track/: default.csv  traj_track.cpp  traj_track.h  traj_track_args.h
ctrl/walk_idqp/: walk_idqp.cpp  walk_idqp.h  walk_idqp_args.h  walk_idqp_tlm.h
ctrl/walk_quasi_idqp/: walk_quasi_idqp.cpp  walk_quasi_idqp.h  walk_quasi_idqp_args.h
ctrl/walk_quasi_planned/: walk_quasi_planned.cpp  walk_quasi_planned.h  walk_quasi_planned_args.h
ctrl/walk_traj/: walk_traj.cpp  walk_traj.h  walk_traj_args.h
doc/: onboard_computers.txt  unitree_ipaddr  unitree_network_interfaces
estim/: state_estim.cpp  state_estim.h
io/: hardware_io.cpp  hardware_io.h  io_handler.cpp  io_handler.h  mujoco_io.cpp  mujoco_io.h  sim_io.cpp  sim_io.h
mpac_release_template/: README.md
mpac_release_template/lib/: libOsqpEigen.so.0.6.1  liblcm.so.1  liboctomap.so.1.9  liboctomath.so.1.9  libpinocchio.so.2.5.6
robot/: morphology.h  parameters.cpp  robot.urdf
robot/stl/: calf.STL  calf_simplified.stl  hip.STL  hip_simplified.stl  thigh_left.STL  thigh_left_simplified.stl  thigh_right.STL  thigh_right_simplified.stl  trunk.STL  trunk_simplified.stl
tlm/: tlm.cpp  tlm.h
